sonarqube/k8/daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    k8s-app: sysctl-conf
  name: sysctl-conf
spec:
  template:
    metadata:
      labels:
        k8s-app: sysctl-conf
    spec:
      containers:
        - command:
            - sh
            - -c
            - sysctl -w vm.max_map_count=262166 && while true; do sleep 86400; done
          image: busybox:1.26.2
          name: sysctl-conf
          resources:
            limits:
              cpu: 10m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 50Mi
          securityContext:
            privileged: true
      terminationGracePeriodSeconds: 1
