sonarqube/k8/sonarqube-postgres.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonar-postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonar-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: sonarpostgredb
      volumes:
        - name: sonarpostgredb
          persistentVolumeClaim:
            claimName: sonar-postgres-pv-claim
