sonarqube/k8/sonar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar-service
  labels:
    app: sonar-service
spec:
  ports:
    - name: ui
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: sonar
  sessionAffinity: None
  type: ClusterIP
---
# [START sonarqube_service_discovery]
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
spec:
  ports:
    - name: db
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: sonar-postgres
  sessionAffinity: None
  type: ClusterIP
# [END sonarqube_service_discovery]
