sonarqube/k8/sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sonarqube-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "sonarqube-session"
    nginx.ingress.kubernetes.io/session-cookie-expires: "600"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
spec:
  tls:
    - hosts:
        - tools.agiletrailblazers.com
      secretName: atb-certs
  rules:
    - host: tools.agiletrailblazers.com
      http:
        paths:
          - path: /sonarqube
            backend:
              serviceName: sonarqube-service
              servicePort: 9000
